started working on blog section
created first blog page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Pranjal Gaur</title>
+    <title>Home</title>
     <meta name="description" content="Pranjal Gaur portfolio website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,12 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Eczar&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles.css" />
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     /> -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <!-- Introduction section -->
@@ -313,7 +313,7 @@
               Box Office Application
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://pranjalg.github.io/Box-office/#/')"
             >
               Visit
@@ -335,7 +335,7 @@
               Tic Tac Toe Game
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://tictac-game-blue-beam.surge.sh/')"
             >
               Visit
@@ -357,7 +357,7 @@
               Drum Kit Webpage
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://pranjalg.github.io/Drum-kit/')"
             >
               Visit
@@ -379,7 +379,7 @@
               TinDog Website Design
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://pranjalg.github.io/TindDog-website/')"
             >
               Visit
@@ -401,7 +401,7 @@
               Card Design for business website
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://dribbble.com/PranjalG')"
             >
               Visit
@@ -423,7 +423,7 @@
               Finance Application Design
             </p>
             <button
-              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg b1 shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://dribbble.com/PranjalG')"
             >
               Visit
@@ -444,6 +444,34 @@
           class="flex bg-[#363635] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
         ></div>
       </div>
+      <div class="grid grid-cols-4 gap-4 m-12">
+        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
+          <h1 class="text-[#000] text-center text-[1.3vmax] m-4 serif-font">
+            Exploring Peri-Urban Areas
+          </h1>
+          <a href="./articles/blog1.html">
+            <img
+              class="mx-auto w-[20vmax] rounded-xl"
+              src="./images/blogs/exploring-peri-urban-areas.png"
+            />
+            <p class="text-[#000] m-4 text-justify">
+              When was the last time you visited the peri-urban areas of your
+              city? Was it when you went out to spend some leisure time with
+              your family and friends? Or was it when you wanted to yourself to
+              be lost amidst the greens?... 
+            </p>
+          </a>
+        </div>
+        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
+          hello
+        </div>
+        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
+          hello
+        </div>
+        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
+          hello
+        </div>
+      </div>
     </section>
 
     <!-- CONTACT -->
@@ -458,7 +486,6 @@
         ></div>
       </div>
     </section>
-
     <script src="./projects.js"></script>
   </body>
 </html>
