blog section complete

--- a/index.html
+++ b/index.html
@@ -444,17 +444,19 @@
           class="flex bg-[#363635] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
         ></div>
       </div>
-      <div class="grid grid-cols-4 gap-4 m-12">
-        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
+      <div class="grid lg:grid-cols-4 gap-4 md:grid-cols-2 sm:grid-cols-1 m-12">
+        <div
+          class="border-cyan-500 border-4 rounded-3xl w-[22vmax] lg:h-[27vw] md:h-[30vw]"
+        >
           <h1 class="text-[#000] text-center text-[1.3vmax] m-4 serif-font">
             Exploring Peri-Urban Areas
           </h1>
           <a href="./articles/blog1.html">
             <img
-              class="mx-auto w-[20vmax] rounded-xl"
+              class="mx-auto w-[20vmax] h-[12vmax] rounded-xl"
               src="./images/blogs/exploring-peri-urban-areas.png"
             />
-            <p class="text-[#000] m-4 text-justify">
+            <p class="text-[#000] m-4 text-justify text-[0.9vmax]">
               When was the last time you visited the peri-urban areas of your
               city? Was it when you went out to spend some leisure time with
               your family and friends? Or was it when you wanted to yourself to
@@ -462,14 +464,63 @@
             </p>
           </a>
         </div>
-        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
-          hello
+        <div
+          class="border-cyan-500 border-4 rounded-3xl w-[22vmax] lg:h-[27vw] md:h-[30vw]"
+        >
+          <h1 class="text-[#000] text-center text-[1.3vmax] m-4 serif-font">
+            Resilience in Life
+          </h1>
+          <a href="./articles/blog2.html">
+            <img
+              class="mx-auto w-[20vmax] h-[12vmax] rounded-xl"
+              src="./images/blogs/resilience.jpg"
+            />
+            <p class="text-[#000] m-4 text-justify text-[0.9vmax]">
+              Resilience is an ineffable quality that makes people face
+              difficult situations of life and come out stronger. It is the
+              process of adapting well in the time of adversity, trauma,
+              tragedy, threats, or even significant sources of stress... 
+            </p>
+          </a>
         </div>
-        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
-          hello
+        <div
+          class="border-cyan-500 border-4 rounded-3xl w-[22vmax] lg:h-[27vw] md:h-[30vw]"
+        >
+          <h1 class="text-[#000] text-center text-[1.3vmax] m-4 serif-font">
+            Creative Writing : Conflict
+          </h1>
+          <a href="./articles/blog3.html">
+            <img
+              class="mx-auto w-[20vmax] h-[12vmax] rounded-xl"
+              src="./images/blogs/conflict.png"
+            />
+            <p class="text-[#000] m-4 text-justify text-[0.9vmax]">
+              It was a breezy morning when I visited the Singh's abode. Lavanya
+              was helping her mother to serve breakfast. Her face had lost
+              colour since we last met. I had never experienced such a quiet and
+              grave... 
+            </p>
+          </a>
         </div>
-        <div class="border-cyan-500 border-4 rounded-3xl w-[22vmax] h-[25vmax]">
-          hello
+        <div
+          class="border-cyan-500 border-4 rounded-3xl w-[22vmax] lg:h-[27vw] md:h-[30vw]"
+        >
+          <h1 class="text-[#000] text-center text-[1.3vmax] m-4 serif-font">
+            What is Leadership?
+          </h1>
+          <a href="./articles/blog4.html">
+            <img
+              class="mx-auto w-[20vmax] h-[12vmax] rounded-xl"
+              src="./images/blogs/leadership.jpg"
+            />
+            <p class="text-[#000] m-4 text-justify text-[0.9vmax]">
+              "If your actions inspire others to dream more, learn more, do more
+              and become more, you are a leader."
+              <br />
+              I would define leadership as the ability to initiate, to process
+              and work coherently on... 
+            </p>
+          </a>
         </div>
       </div>
     </section>
@@ -484,6 +535,12 @@
         <div
           class="flex bg-[#eee] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
         ></div>
+      </div>
+
+      <div class="gird grid-cols-1">
+        <h1 class="text-center text-[1.3vmax] text-cyan-400 serif-font m-8">
+          Have a question, want to give feedback?
+        </h1>
       </div>
     </section>
     <script src="./projects.js"></script>
