completed the contact section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Eczar&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./styles.css" />
+
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -296,7 +303,7 @@
       </div>
 
       <div
-        class="relative grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2 gap-4 ml-8"
+        class="relative grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-4 ml-8"
       >
         <div class="card py-14 h-[20vmax]">
           <div>
@@ -527,7 +534,7 @@
 
     <!-- CONTACT -->
 
-    <section id="contact" class="py-20">
+    <section id="contact" class="py-20 pb-0">
       <div class="text-center">
         <h1 class="header serif-font text-center font-bold text-[4vmin]">
           CONTACT
@@ -541,8 +548,50 @@
         <h1 class="text-center text-[1.3vmax] text-cyan-400 serif-font m-8">
           Have a question, want to give feedback?
         </h1>
+        <a href="mailto:gaurpranjal236@gmail.com">
+          <div class="flex items-center justify-center m-6">
+            <button class="text-[#fff] rounded-xl bg-[#f8485e] py-2 px-4">
+              Send me an email
+            </button>
+          </div>
+        </a>
+      </div>
+      <div class="flex items-center justify-center bg-[#14122a] pt-20 mt-20">
+        <div class="m-4">
+          <i
+            class="fab fa-github fa-2x hover:text-[#000]"
+            onclick="window.open('https://github.com/PranjalG')"
+          ></i>
+        </div>
+        <div class="m-4">
+          <i
+            class="fab fa-linkedin fa-2x hover:text-[#0077B5]"
+            onclick="window.open('https://www.linkedin.com/in/pranjal-gaur-3b5213205/')"
+          ></i>
+        </div>
+        <div class="m-4">
+          <i
+            class="fab fa-dribbble fa-2x hover:text-[#e6447d]"
+            onclick="window.open('https://dribbble.com/PranjalG')"
+          ></i>
+        </div>
+        <div class="m-4">
+          <i
+            class="fab fa-twitter fa-2x hover:text-[#08a0e9]"
+            onclick="window.open('https://mobile.twitter.com/pranjal_g_')"
+          ></i>
+        </div>
+      </div>
+      <div class="flex items-center justify-center bg-[#14122a] pt-4 pb-8">
+        <div>
+          <h6 class="text-[#7e7e7e]">
+            <i class="far fa-copyright"></i>
+            Pranjal Gaur 2022
+          </h6>
+        </div>
       </div>
     </section>
+
     <script src="./projects.js"></script>
   </body>
 </html>
