made blog section responsive

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
           ABOUT
         </h1>
         <div
-          class="flex bg-[#363635] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
+          class="flex bg-[#363635] rounded-full mx-auto w-[13vh] h-[0.5vh]"
         ></div>
       </div>
       <div class="container mx-auto py-10">
         <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1">
           <div>
             <img
-              class="mx-auto pt-8 lg:h-[15vmax] md:h-[15vmax] sm:h-[40vmin]"
+              class="mx-auto pt-8 h-[20vh]"
               src="./images/icons/coding.png"
               alt="coding"
             />
@@ -104,7 +104,7 @@
           </div>
           <div>
             <img
-              class="mx-auto pt-8 lg:h-[15vmax] md:h-[15vmax] sm:h-[40vmin]"
+              class="mx-auto pt-8 h-[20vh]"
               src="./images/icons/web-development.png"
               alt="tech"
             />
@@ -123,7 +123,7 @@
           </div>
           <div>
             <img
-              class="mx-auto pt-8 lg:h-[15vmax] md:h-[15vmax] sm:h-[40vmin]"
+              class="mx-auto pt-8 h-[20vh]"
               src="./images/icons/design.png"
               alt=" "
             />
@@ -142,7 +142,7 @@
           </div>
           <div>
             <img
-              class="mx-auto pt-8 lg:h-[15vmax] md:h-[15vmax] sm:h-[40vmin]"
+              class="mx-auto pt-8 h-[20vh]"
               src="./images/icons/iot-cloud.png"
               alt=" "
             />
@@ -169,12 +169,12 @@
         <div class="grid lg:grid-cols-2 md:lg:grid-cols-2 sm:grid-cols-1">
           <div class="mx-auto">
             <img
-              class="profile-img mx-auto lg:w-[20vmax] sm:w-[40vmin]"
+              class="profile-img mx-auto w-[25vh]"
               src="./images/profile_image.jpg"
               alt="Pranjal Gaur Profile Image"
             />
-            <div class="container text-center pb-6">
-              <p class="text-stone-800 lg:w-[22vw] sm:w-[40vmin]">
+            <div class="container pb-6">
+              <p class="text-stone-800 text-center w-[25vh]">
                 Hello there! I am Pranjal Gaur, a pre-final year student at
                 <a class="text-[#f8485e]" href="https://mbm.ac.in/"
                   >MBM Engineering College</a
@@ -186,9 +186,7 @@
           <div class="mx-auto py-[6vh]">
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] lg:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>C/C++</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
@@ -200,9 +198,7 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>Python</h4>
                 </td>
                 <td class="percent-fill w-[19vmax] h-[3vh]"></td>
@@ -214,9 +210,7 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>Java</h4>
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
@@ -228,9 +222,7 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>HTML</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
@@ -242,9 +234,7 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>CSS</h4>
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
@@ -256,10 +246,8 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
-                  <h4>Javascript</h4>
+                <td class="skill text-center w-[15vmin] h-[3vh]">
+                  <h4>JS</h4>
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[9vmax] h-[3vh]">
@@ -270,9 +258,7 @@
             </table>
             <table>
               <tr>
-                <td
-                  class="skill text-center sm:w-[10vmax] md:w-[15vmin] h-[3vh]"
-                >
+                <td class="skill text-center w-[15vmin] h-[3vh]">
                   <h4>React</h4>
                 </td>
                 <td class="percent-fill w-[18vmax] h-[3vh]"></td>
@@ -297,9 +283,7 @@
         <h1 class="header serif-font text-center font-bold text-[4vmin]">
           PROJECTS
         </h1>
-        <div
-          class="flex bg-[#eee] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
-        ></div>
+        <div class="flex bg-[#eee] rounded-full mx-auto w-[] h-[0.5vh]"></div>
       </div>
 
       <div
@@ -448,7 +432,7 @@
           BLOG
         </h1>
         <div
-          class="flex bg-[#363635] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
+          class="flex bg-[#363635] rounded-full mx-auto w-[13vh] h-[0.5vh]"
         ></div>
       </div>
       <div class="grid lg:grid-cols-4 gap-4 md:grid-cols-2 sm:grid-cols-1 m-12">
@@ -540,7 +524,7 @@
           CONTACT
         </h1>
         <div
-          class="flex bg-[#eee] rounded-full mx-auto lg:w-[13vh] md:w-[13vh] sm:w-[13vmin] h-[0.5vh]"
+          class="flex bg-[#eee] rounded-full mx-auto w-[13vh] h-[0.5vh]"
         ></div>
       </div>
 
