made blog more section responsive

--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
         <h1 class="header serif-font text-center font-bold text-[4vmin]">
           PROJECTS
         </h1>
-        <div class="flex bg-[#eee] rounded-full mx-auto w-[] h-[0.5vh]"></div>
+        <div
+          class="flex bg-[#eee] rounded-full mx-auto w-[13vh] h-[0.5vh]"
+        ></div>
       </div>
 
       <div
@@ -435,7 +437,9 @@
           class="flex bg-[#363635] rounded-full mx-auto w-[13vh] h-[0.5vh]"
         ></div>
       </div>
-      <div class="grid lg:grid-cols-4 gap-4 md:grid-cols-2 sm:grid-cols-1 m-12">
+      <div
+        class="grid lg:grid-cols-4 gap-4 md:grid-cols-2 sm:grid-cols-1 m-12 flex items-center justify-center"
+      >
         <div
           class="border-cyan-500 border-4 rounded-3xl w-[22vmax] lg:h-[27vw] md:h-[30vw]"
         >
