--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             />
             <div class="container pb-6">
               <p class="text-stone-800 text-center w-[25vh]">
-                Hello there! I am Pranjal Gaur, a pre-final year student at
+                Hello there! I am Pranjal Gaur, a final year student at
                 <a class="text-[#f8485e]" href="https://mbm.ac.in/"
-                  >MBM Engineering College</a
+                  >MBM University</a
                 >, Jodhpur.
                 <a class="text-[#f8485e]" href="#contact">Let's Connect!</a>
               </p>
