--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="text-stone-800 text-justify p-[1.5vmax]">
               I am interested in developing web-applications as it helps to
               execute every bit of knowledge gained and present out a means to
-              solve a real world problems. I have practiced web-development and
+              solve a real world problem. I have practiced web-development and
               built frontend as well as full-stack projects that showcase
               innovation.
             </p>
